# goit-algo-hw-06

./: .gitignore  README.md  task1.py  task3.py
goit-algo-hw-06/: README.md  pyproject.toml  task2.py
